2005-08-19 11:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeFaceAreaUV) increased the
	face area in UV that requires fixing from 1.0e-14 to 1.0e-12 to
	allow the om6 case to run on cmb20.
	
2005-08-17 16:50 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) drop gridSetMinInsertCost for linear adapt.
	
2005-08-17 15:28 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added --vaild to turn on gridCOST_CNST_VALID.
	
2005-08-17 15:15 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) update existing segment uv's from
	latest segment

2005-08-17 15:07 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSegmentIntersectsFace) return NULL if
	iteration count exceeded.

2005-08-15 15:07 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotEquatorFaces) added to dump out the
	equator as faces around the axle instead of outer faces.

2005-08-15 09:28 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringArea) to speed up execution... compute, store,
	and always reply with result from first invocation.

2005-08-13 14:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) use
	ringSurroundsTriangle instead of area check.
	* src/gridinsert.c (gridFillRingWithExisitingCellFaces) use
	ringSurroundsTriangle instead of area check.

2005-08-13 13:58 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsTriangle) reject triangle that pierces
	ring.

2005-08-12 16:06 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringArea) compute total area of the ring.
	* src/ring.c (ringSurroundsTriangle) accept triangle if area is the
	same sign as ring total area.

2005-08-12 12:55 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsTriangle) added to test if a triangle
	is acceptable to add in order to eventually complete ring.

2005-08-12 12:40 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringIntersectsSegment) handels parallel segments
	correctly.
