@@ -785,7 +785,7 @@ GridMove *gridmoveElasticRelaxationStartUp(GridMove *gm)
   return gm;
 }
 
-GridMove *gridmoveElasticRelaxationStartStep(GridMove *gm, double position)
+GridMove *gridmoveElasticRelax_Old_StartStep(GridMove *gm, double position)
 {
   Grid *grid = gridmoveGrid(gm);
   int i;
@@ -1117,6 +1117,465 @@ GridMove *gridmoveElasticRelaxationStartStep(GridMove *gm, double position)
       gm->a[6+ioff43] = gm->a[6+ioff43] + zn*R*c3x;
       gm->a[7+ioff43] = gm->a[7+ioff43] + zn*R*c3y;
       gm->a[8+ioff43] = gm->a[8+ioff43] + zn*onePlusR*c3z + xn*c3x+ yn*c3y;
+    }
+  }
+
+  for(node=0;node<gridMaxNode(grid);node++) {
+    if ( gridValidNode(grid,node) &&
+	 ( gridmoveSpecified(gm,node) || gridNodeGhost(grid,node) ) ) {
+      for ( entry = gridmoveRowStart(gm, node) ;
+	    entry < gridmoveRowStart(gm, node+1) ;
+	    entry++ ) {
+	for(i=0;i<9;i++) gm->a[i+9*entry] = 0.0;
+      }
+      entry = gridmoveRowEntry(gm,node,node);
+      if (0 <= entry && entry<gridmoveNNZ(gm) ) {
+	gm->a[0+9*entry] = 1.0;
+	gm->a[4+9*entry] = 1.0;
+	gm->a[8+9*entry] = 1.0;
+      }else{
+	printf("ERROR %s: %d: %s: node %d entry %d NNZ %d valid %d spec %d ghost %d\n",
+	       __FILE__,__LINE__,"Entry out of range",
+	       node, entry, gridmoveNNZ(gm),  
+	       gridValidNode(grid,node),
+	       gridmoveSpecified(gm,node),
+	       gridNodeGhost(grid,node));
+	printf("node %d cell degree %d\n",node,gridCellDegree(grid, node));
+	printf("row %d start %d\n",node,gridmoveRowStart(gm, node));
+	printf("row %d start %d\n",node+1,gridmoveRowStart(gm, node+1));
+	for ( entry = gridmoveRowStart(gm, node) ;
+	      entry < gridmoveRowStart(gm, node+1) ;
+	      entry++ ) {
+	  printf("entry %d value %d\n",entry,gm->compRow[entry]);	  
+	}
+      }
+    }
+  }
+
+  for(node=0;node<gridMaxNode(grid);node++) {
+    entry = gridmoveRowEntry(gm,node,node);
+    if (EMPTY != entry) {
+      gridLU3x3( &gm->a[9*entry], &gm->lu[9*node] );
+    } else {
+      for(i=0;i<9;i++) gm->lu[i+9*node] = 0.0;
+      gm->lu[0+9*node] = 1.0;
+      gm->lu[4+9*node] = 1.0;
+      gm->lu[8+9*node] = 1.0;
+    }    
+  }
+
+  return gm;
+}
+
+GridMove *gridmoveElasticRelaxationStartStep(GridMove *gm, double position)
+{
+  Grid *grid = gridmoveGrid(gm);
+  int i;
+  int cell, nodes[4];
+  double x1, y1, z1;
+  double x2, y2, z2;
+  double x3, y3, z3;
+  double x4, y4, z4;
+  double nx1, ny1, nz1;
+  double nx2, ny2, nz2;
+  double nx3, ny3, nz3;
+  double nx4, ny4, nz4;
+  double vol;
+
+  int idiag1, idiag2, idiag3, idiag4;
+  int ioff12, ioff13, ioff14;
+  int ioff21, ioff23, ioff24;
+  int ioff31, ioff32, ioff34;
+  int ioff41, ioff42, ioff43;
+
+  double c;
+  double c1x, c1y, c1z;
+  double c2x, c2y, c2z;
+  double c3x, c3y, c3z;
+  double c4x, c4y, c4z;
+
+  double xn, yn, zn;
+
+  double xyz1[3], xyz2[3], xyz3[3], xyz4[3];
+  
+  double aspect_ratio;
+  double modulus_of_elasticity, poisson, mu, lambda;
+  double xlambda, ylambda, zlambda;
+  double xmu, ymu, zmu;
+  double muterm;
+
+  int node, entry;
+  double xyz[3];
+
+
+  for(node=0;node<3*gridMaxNode(grid);node++)
+    gm->lastxyz[node] += gm->xyz[node];
+
+  for(node=0;node<3*gridMaxNode(grid);node++)
+    gm->xyz[node] = 0.0;
+
+  for(node=0;node<gridMaxNode(grid);node++) {
+    if ( gridValidNode(grid,node) &&
+	 gridmoveSpecified(gm,node) && 
+	 gridNodeLocal(grid,node) ) {
+      gridNodeXYZ(grid,node,xyz);
+      for(i=0;i<3;i++)
+	gm->xyz[i+3*node] = position*gm->displacement[i+3*node]+xyz[i] 
+	  - gm->lastxyz[i+3*node];
+    }
+  }
+
+  for(i=0;i<9*gridmoveNNZ(gm);i++) gm->a[i]=0.0;
+
+  for(cell=0;cell<gridMaxCell(grid);cell++){
+    if (grid==gridCell(grid,cell,nodes)) {
+
+      x1 = gm->lastxyz[0+3*nodes[0]];
+      y1 = gm->lastxyz[1+3*nodes[0]];
+      z1 = gm->lastxyz[2+3*nodes[0]];
+      x2 = gm->lastxyz[0+3*nodes[1]];
+      y2 = gm->lastxyz[1+3*nodes[1]];
+      z2 = gm->lastxyz[2+3*nodes[1]];
+      x3 = gm->lastxyz[0+3*nodes[2]];
+      y3 = gm->lastxyz[1+3*nodes[2]];
+      z3 = gm->lastxyz[2+3*nodes[2]];
+      x4 = gm->lastxyz[0+3*nodes[3]];
+      y4 = gm->lastxyz[1+3*nodes[3]];
+      z4 = gm->lastxyz[2+3*nodes[3]];
+
+      nx1 = 0.5*((y2 - y4)*(z3 - z4) - (y3 - y4)*(z2 - z4));
+      ny1 = 0.5*((z2 - z4)*(x3 - x4) - (z3 - z4)*(x2 - x4));
+      nz1 = 0.5*((x2 - x4)*(y3 - y4) - (x3 - x4)*(y2 - y4));
+
+      nx2 = 0.5*((y3 - y4)*(z1 - z4) - (y1 - y4)*(z3 - z4));
+      ny2 = 0.5*((z3 - z4)*(x1 - x4) - (z1 - z4)*(x3 - x4));
+      nz2 = 0.5*((x3 - x4)*(y1 - y4) - (x1 - x4)*(y3 - y4));
+
+      nx3 = 0.5*((y1 - y4)*(z2 - z4) - (y2 - y4)*(z1 - z4));
+      ny3 = 0.5*((z1 - z4)*(x2 - x4) - (z2 - z4)*(x1 - x4));
+      nz3 = 0.5*((x1 - x4)*(y2 - y4) - (x2 - x4)*(y1 - y4));
+
+      nx4 = -nx1 -nx2 -nx3;
+      ny4 = -ny1 -ny2 -ny3;
+      nz4 = -nz1 -nz2 -nz3;
+
+      vol = ( ((y2-y1)*(z3-z1) - (y3-y1)*(z2-z1))*(x4-x1) -
+	      ((x2-x1)*(z3-z1) - (x3-x1)*(z2-z1))*(y4-y1) +
+	      ((x2-x1)*(y3-y1) - (x3-x1)*(y2-y1))*(z4-z1) ) / 6.0;
+
+      if(vol <= 0.0)printf("%s: %d: Negative Vol %f %f %f\n",
+			   __FILE__,__LINE__,x1,y1,z1);
+
+      idiag1 = 9*gridmoveRowEntry(gm,nodes[0],nodes[0]);
+      ioff12 = 9*gridmoveRowEntry(gm,nodes[0],nodes[1]);
+      ioff13 = 9*gridmoveRowEntry(gm,nodes[0],nodes[2]);
+      ioff14 = 9*gridmoveRowEntry(gm,nodes[0],nodes[3]);
+
+      ioff21 = 9*gridmoveRowEntry(gm,nodes[1],nodes[0]);
+      idiag2 = 9*gridmoveRowEntry(gm,nodes[1],nodes[1]);
+      ioff23 = 9*gridmoveRowEntry(gm,nodes[1],nodes[2]);
+      ioff24 = 9*gridmoveRowEntry(gm,nodes[1],nodes[3]);
+
+      ioff31 = 9*gridmoveRowEntry(gm,nodes[2],nodes[0]);
+      ioff32 = 9*gridmoveRowEntry(gm,nodes[2],nodes[1]);
+      idiag3 = 9*gridmoveRowEntry(gm,nodes[2],nodes[2]);
+      ioff34 = 9*gridmoveRowEntry(gm,nodes[2],nodes[3]);
+
+      ioff41 = 9*gridmoveRowEntry(gm,nodes[3],nodes[0]);
+      ioff42 = 9*gridmoveRowEntry(gm,nodes[3],nodes[1]);
+      ioff43 = 9*gridmoveRowEntry(gm,nodes[3],nodes[2]);
+      idiag4 = 9*gridmoveRowEntry(gm,nodes[3],nodes[3]);
+
+      c = 1.0/(3.0*vol);
+      c1x = c*(nx2 + nx3 + nx4);
+      c2x = c*(nx3 + nx4 + nx1);
+      c3x = c*(nx4 + nx1 + nx2);
+      c4x = c*(nx1 + nx2 + nx3);
+
+      c1y = c*(ny2 + ny3 + ny4);
+      c2y = c*(ny3 + ny4 + ny1);
+      c3y = c*(ny4 + ny1 + ny2);
+      c4y = c*(ny1 + ny2 + ny3);
+
+      c1z = c*(nz2 + nz3 + nz4);
+      c2z = c*(nz3 + nz4 + nz1);
+      c3z = c*(nz4 + nz1 + nz2);
+      c4z = c*(nz1 + nz2 + nz3);
+
+      xyz1[0] = x1;
+      xyz1[1] = y1;
+      xyz1[2] = z1;
+   
+      xyz2[0] = x2;
+      xyz2[1] = y2;
+      xyz2[2] = z2;
+   
+      xyz3[0] = x3;
+      xyz3[1] = y3;
+      xyz3[2] = z3;
+   
+      xyz4[0] = x4;
+      xyz4[1] = y4;
+      xyz4[2] = z4;
+   
+
+      aspect_ratio = gridCellAspectRatio( xyz1, xyz2, xyz3, xyz4 );
+
+      if ( aspect_ratio > 1.0e-8 ) {
+	modulus_of_elasticity = 1.0 / aspect_ratio;
+      }else {
+	modulus_of_elasticity = 1.0 / 1.0e-8;
+      }
+
+      poisson = 0.05;
+
+      mu     = modulus_of_elasticity / 2.0 / (1.0 + poisson);
+      lambda = 
+	poisson * modulus_of_elasticity / (1.0 + poisson) / (1.0 - 2.0*poisson);
+
+      /* node1 */
+      xn = nx1/3.0;
+      yn = ny1/3.0;
+      zn = nz1/3.0;
+
+      xlambda = xn*lambda;
+      ylambda = yn*lambda;
+      zlambda = zn*lambda;
+
+      xmu = xn*mu;
+      ymu = yn*mu;
+      zmu = zn*mu;
+      
+      muterm = mu*(xn*c1x + yn*c1y + zn*c1z);
+
+      gm->a[0+idiag1] = gm->a[0+idiag1] + muterm + xlambda*c1x + xmu*c1x;
+      gm->a[1+idiag1] = gm->a[1+idiag1]          + xlambda*c1y + ymu*c1x;
+      gm->a[2+idiag1] = gm->a[2+idiag1]          + xlambda*c1z + zmu*c1x;
+      gm->a[3+idiag1] = gm->a[3+idiag1]          + ylambda*c1x + xmu*c1y;
+      gm->a[4+idiag1] = gm->a[4+idiag1] + muterm + ylambda*c1y + ymu*c1y;
+      gm->a[5+idiag1] = gm->a[5+idiag1]          + ylambda*c1z + zmu*c1y;
+      gm->a[6+idiag1] = gm->a[6+idiag1]          + zlambda*c1x + xmu*c1z;
+      gm->a[7+idiag1] = gm->a[7+idiag1]          + zlambda*c1y + ymu*c1z;
+      gm->a[8+idiag1] = gm->a[8+idiag1] + muterm + zlambda*c1z + zmu*c1z;
+
+      muterm = mu*(xn*c2x + yn*c2y + zn*c2z);
+
+      gm->a[0+ioff12] = gm->a[0+ioff12] + muterm + xlambda*c2x + xmu*c2x;
+      gm->a[1+ioff12] = gm->a[1+ioff12]          + xlambda*c2y + ymu*c2x;
+      gm->a[2+ioff12] = gm->a[2+ioff12]          + xlambda*c2z + zmu*c2x;
+      gm->a[3+ioff12] = gm->a[3+ioff12]          + ylambda*c2x + xmu*c2y;
+      gm->a[4+ioff12] = gm->a[4+ioff12] + muterm + ylambda*c2y + ymu*c2y;
+      gm->a[5+ioff12] = gm->a[5+ioff12]          + ylambda*c2z + zmu*c2y;
+      gm->a[6+ioff12] = gm->a[6+ioff12]          + zlambda*c2x + xmu*c2z;
+      gm->a[7+ioff12] = gm->a[7+ioff12]          + zlambda*c2y + ymu*c2z;
+      gm->a[8+ioff12] = gm->a[8+ioff12] + muterm + zlambda*c2z + zmu*c2z;
+
+      muterm = mu*(xn*c3x + yn*c3y + zn*c3z);
+
+      gm->a[0+ioff13] = gm->a[0+ioff13] + muterm + xlambda*c3x + xmu*c3x;
+      gm->a[1+ioff13] = gm->a[1+ioff13]          + xlambda*c3y + ymu*c3x;
+      gm->a[2+ioff13] = gm->a[2+ioff13]          + xlambda*c3z + zmu*c3x;
+      gm->a[3+ioff13] = gm->a[3+ioff13]          + ylambda*c3x + xmu*c3y;
+      gm->a[4+ioff13] = gm->a[4+ioff13] + muterm + ylambda*c3y + ymu*c3y;
+      gm->a[5+ioff13] = gm->a[5+ioff13]          + ylambda*c3z + zmu*c3y;
+      gm->a[6+ioff13] = gm->a[6+ioff13]          + zlambda*c3x + xmu*c3z;
+      gm->a[7+ioff13] = gm->a[7+ioff13]          + zlambda*c3y + ymu*c3z;
+      gm->a[8+ioff13] = gm->a[8+ioff13] + muterm + zlambda*c3z + zmu*c3z;
+
+      muterm = mu*(xn*c4x + yn*c4y + zn*c4z);
+
+      gm->a[0+ioff14] = gm->a[0+ioff14] + muterm + xlambda*c4x + xmu*c4x;
+      gm->a[1+ioff14] = gm->a[1+ioff14]          + xlambda*c4y + ymu*c4x;
+      gm->a[2+ioff14] = gm->a[2+ioff14]          + xlambda*c4z + zmu*c4x;
+      gm->a[3+ioff14] = gm->a[3+ioff14]          + ylambda*c4x + xmu*c4y;
+      gm->a[4+ioff14] = gm->a[4+ioff14] + muterm + ylambda*c4y + ymu*c4y;
+      gm->a[5+ioff14] = gm->a[5+ioff14]          + ylambda*c4z + zmu*c4y;
+      gm->a[6+ioff14] = gm->a[6+ioff14]          + zlambda*c4x + xmu*c4z;
+      gm->a[7+ioff14] = gm->a[7+ioff14]          + zlambda*c4y + ymu*c4z;
+      gm->a[8+ioff14] = gm->a[8+ioff14] + muterm + zlambda*c4z + zmu*c4z;
+
+      /* node2 */
+      xn = nx2/3.0;
+      yn = ny2/3.0;
+      zn = nz2/3.0;
+
+      xlambda = xn*lambda;
+      ylambda = yn*lambda;
+      zlambda = zn*lambda;
+
+      xmu = xn*mu;
+      ymu = yn*mu;
+      zmu = zn*mu;
+
+      muterm = mu*(xn*c2x + yn*c2y + zn*c2z);
+
+      gm->a[0+idiag2] = gm->a[0+idiag2] + muterm + xlambda*c2x + xmu*c2x;
+      gm->a[1+idiag2] = gm->a[1+idiag2]          + xlambda*c2y + ymu*c2x;
+      gm->a[2+idiag2] = gm->a[2+idiag2]          + xlambda*c2z + zmu*c2x;
+      gm->a[3+idiag2] = gm->a[3+idiag2]          + ylambda*c2x + xmu*c2y;
+      gm->a[4+idiag2] = gm->a[4+idiag2] + muterm + ylambda*c2y + ymu*c2y;
+      gm->a[5+idiag2] = gm->a[5+idiag2]          + ylambda*c2z + zmu*c2y;
+      gm->a[6+idiag2] = gm->a[6+idiag2]          + zlambda*c2x + xmu*c2z;
+      gm->a[7+idiag2] = gm->a[7+idiag2]          + zlambda*c2y + ymu*c2z;
+      gm->a[8+idiag2] = gm->a[8+idiag2] + muterm + zlambda*c2z + zmu*c2z;
+
+      muterm = mu*(xn*c3x + yn*c3y + zn*c3z);
+
+      gm->a[0+ioff23] = gm->a[0+ioff23] + muterm + xlambda*c3x + xmu*c3x;
+      gm->a[1+ioff23] = gm->a[1+ioff23]          + xlambda*c3y + ymu*c3x;
+      gm->a[2+ioff23] = gm->a[2+ioff23]          + xlambda*c3z + zmu*c3x;
+      gm->a[3+ioff23] = gm->a[3+ioff23]          + ylambda*c3x + xmu*c3y;
+      gm->a[4+ioff23] = gm->a[4+ioff23] + muterm + ylambda*c3y + ymu*c3y;
+      gm->a[5+ioff23] = gm->a[5+ioff23]          + ylambda*c3z + zmu*c3y;
+      gm->a[6+ioff23] = gm->a[6+ioff23]          + zlambda*c3x + xmu*c3z;
+      gm->a[7+ioff23] = gm->a[7+ioff23]          + zlambda*c3y + ymu*c3z;
+      gm->a[8+ioff23] = gm->a[8+ioff23] + muterm + zlambda*c3z + zmu*c3z;
+
+      muterm = mu*(xn*c4x + yn*c4y + zn*c4z);
+
+      gm->a[0+ioff24] = gm->a[0+ioff24] + muterm + xlambda*c4x + xmu*c4x;
+      gm->a[1+ioff24] = gm->a[1+ioff24]          + xlambda*c4y + ymu*c4x;
+      gm->a[2+ioff24] = gm->a[2+ioff24]          + xlambda*c4z + zmu*c4x;
+      gm->a[3+ioff24] = gm->a[3+ioff24]          + ylambda*c4x + xmu*c4y;
+      gm->a[4+ioff24] = gm->a[4+ioff24] + muterm + ylambda*c4y + ymu*c4y;
+      gm->a[5+ioff24] = gm->a[5+ioff24]          + ylambda*c4z + zmu*c4y;
+      gm->a[6+ioff24] = gm->a[6+ioff24]          + zlambda*c4x + xmu*c4z;
+      gm->a[7+ioff24] = gm->a[7+ioff24]          + zlambda*c4y + ymu*c4z;
+      gm->a[8+ioff24] = gm->a[8+ioff24] + muterm + zlambda*c4z + zmu*c4z;
+
+      muterm = mu*(xn*c1x + yn*c1y + zn*c1z);
+
+      gm->a[0+ioff21] = gm->a[0+ioff21] + muterm + xlambda*c1x + xmu*c1x;
+      gm->a[1+ioff21] = gm->a[1+ioff21]          + xlambda*c1y + ymu*c1x;
+      gm->a[2+ioff21] = gm->a[2+ioff21]          + xlambda*c1z + zmu*c1x;
+      gm->a[3+ioff21] = gm->a[3+ioff21]          + ylambda*c1x + xmu*c1y;
+      gm->a[4+ioff21] = gm->a[4+ioff21] + muterm + ylambda*c1y + ymu*c1y;
+      gm->a[5+ioff21] = gm->a[5+ioff21]          + ylambda*c1z + zmu*c1y;
+      gm->a[6+ioff21] = gm->a[6+ioff21]          + zlambda*c1x + xmu*c1z;
+      gm->a[7+ioff21] = gm->a[7+ioff21]          + zlambda*c1y + ymu*c1z;
+      gm->a[8+ioff21] = gm->a[8+ioff21] + muterm + zlambda*c1z + zmu*c1z;
+    
+      /* node3 */
+      xn = nx3/3.0;
+      yn = ny3/3.0;
+      zn = nz3/3.0;
+
+      xlambda = xn*lambda;
+      ylambda = yn*lambda;
+      zlambda = zn*lambda;
+
+      xmu = xn*mu;
+      ymu = yn*mu;
+      zmu = zn*mu;
+
+      muterm = mu*(xn*c3x + yn*c3y + zn*c3z);
+
+      gm->a[0+idiag3] = gm->a[0+idiag3] + muterm + xlambda*c3x + xmu*c3x;
+      gm->a[1+idiag3] = gm->a[1+idiag3]          + xlambda*c3y + ymu*c3x;
+      gm->a[2+idiag3] = gm->a[2+idiag3]          + xlambda*c3z + zmu*c3x;
+      gm->a[3+idiag3] = gm->a[3+idiag3]          + ylambda*c3x + xmu*c3y;
+      gm->a[4+idiag3] = gm->a[4+idiag3] + muterm + ylambda*c3y + ymu*c3y;
+      gm->a[5+idiag3] = gm->a[5+idiag3]          + ylambda*c3z + zmu*c3y;
+      gm->a[6+idiag3] = gm->a[6+idiag3]          + zlambda*c3x + xmu*c3z;
+      gm->a[7+idiag3] = gm->a[7+idiag3]          + zlambda*c3y + ymu*c3z;
+      gm->a[8+idiag3] = gm->a[8+idiag3] + muterm + zlambda*c3z + zmu*c3z;
+
+      muterm = mu*(xn*c4x + yn*c4y + zn*c4z);
+
+      gm->a[0+ioff34] = gm->a[0+ioff34] + muterm + xlambda*c4x + xmu*c4x;
+      gm->a[1+ioff34] = gm->a[1+ioff34]          + xlambda*c4y + ymu*c4x;
+      gm->a[2+ioff34] = gm->a[2+ioff34]          + xlambda*c4z + zmu*c4x;
+      gm->a[3+ioff34] = gm->a[3+ioff34]          + ylambda*c4x + xmu*c4y;
+      gm->a[4+ioff34] = gm->a[4+ioff34] + muterm + ylambda*c4y + ymu*c4y;
+      gm->a[5+ioff34] = gm->a[5+ioff34]          + ylambda*c4z + zmu*c4y;
+      gm->a[6+ioff34] = gm->a[6+ioff34]          + zlambda*c4x + xmu*c4z;
+      gm->a[7+ioff34] = gm->a[7+ioff34]          + zlambda*c4y + ymu*c4z;
+      gm->a[8+ioff34] = gm->a[8+ioff34] + muterm + zlambda*c4z + zmu*c4z;
+
+      muterm = mu*(xn*c1x + yn*c1y + zn*c1z);
+
+      gm->a[0+ioff31] = gm->a[0+ioff31] + muterm + xlambda*c1x + xmu*c1x;
+      gm->a[1+ioff31] = gm->a[1+ioff31]          + xlambda*c1y + ymu*c1x;
+      gm->a[2+ioff31] = gm->a[2+ioff31]          + xlambda*c1z + zmu*c1x;
+      gm->a[3+ioff31] = gm->a[3+ioff31]          + ylambda*c1x + xmu*c1y;
+      gm->a[4+ioff31] = gm->a[4+ioff31] + muterm + ylambda*c1y + ymu*c1y;
+      gm->a[5+ioff31] = gm->a[5+ioff31]          + ylambda*c1z + zmu*c1y;
+      gm->a[6+ioff31] = gm->a[6+ioff31]          + zlambda*c1x + xmu*c1z;
+      gm->a[7+ioff31] = gm->a[7+ioff31]          + zlambda*c1y + ymu*c1z;
+      gm->a[8+ioff31] = gm->a[8+ioff31] + muterm + zlambda*c1z + zmu*c1z;
+
+      muterm = mu*(xn*c2x + yn*c2y + zn*c2z);
+
+      gm->a[0+ioff32] = gm->a[0+ioff32] + muterm + xlambda*c2x + xmu*c2x;
+      gm->a[1+ioff32] = gm->a[1+ioff32]          + xlambda*c2y + ymu*c2x;
+      gm->a[2+ioff32] = gm->a[2+ioff32]          + xlambda*c2z + zmu*c2x;
+      gm->a[3+ioff32] = gm->a[3+ioff32]          + ylambda*c2x + xmu*c2y;
+      gm->a[4+ioff32] = gm->a[4+ioff32] + muterm + ylambda*c2y + ymu*c2y;
+      gm->a[5+ioff32] = gm->a[5+ioff32]          + ylambda*c2z + zmu*c2y;
+      gm->a[6+ioff32] = gm->a[6+ioff32]          + zlambda*c2x + xmu*c2z;
+      gm->a[7+ioff32] = gm->a[7+ioff32]          + zlambda*c2y + ymu*c2z;
+      gm->a[8+ioff32] = gm->a[8+ioff32] + muterm + zlambda*c2z + zmu*c2z;
+
+      /* node4 */
+      xn = nx4/3.0;
+      yn = ny4/3.0;
+      zn = nz4/3.0;
+
+      xlambda = xn*lambda;
+      ylambda = yn*lambda;
+      zlambda = zn*lambda;
+
+      xmu = xn*mu;
+      ymu = yn*mu;
+      zmu = zn*mu;
+
+      muterm = mu*(xn*c4x + yn*c4y + zn*c4z);
+
+      gm->a[0+idiag4] = gm->a[0+idiag4] + muterm + xlambda*c4x + xmu*c4x;
+      gm->a[1+idiag4] = gm->a[1+idiag4]          + xlambda*c4y + ymu*c4x;
+      gm->a[2+idiag4] = gm->a[2+idiag4]          + xlambda*c4z + zmu*c4x;
+      gm->a[3+idiag4] = gm->a[3+idiag4]          + ylambda*c4x + xmu*c4y;
+      gm->a[4+idiag4] = gm->a[4+idiag4] + muterm + ylambda*c4y + ymu*c4y;
+      gm->a[5+idiag4] = gm->a[5+idiag4]          + ylambda*c4z + zmu*c4y;
+      gm->a[6+idiag4] = gm->a[6+idiag4]          + zlambda*c4x + xmu*c4z;
+      gm->a[7+idiag4] = gm->a[7+idiag4]          + zlambda*c4y + ymu*c4z;
+      gm->a[8+idiag4] = gm->a[8+idiag4] + muterm + zlambda*c4z + zmu*c4z;
+
+      muterm = mu*(xn*c1x + yn*c1y + zn*c1z);
+
+      gm->a[0+ioff41] = gm->a[0+ioff41] + muterm + xlambda*c1x + xmu*c1x;
+      gm->a[1+ioff41] = gm->a[1+ioff41]          + xlambda*c1y + ymu*c1x;
+      gm->a[2+ioff41] = gm->a[2+ioff41]          + xlambda*c1z + zmu*c1x;
+      gm->a[3+ioff41] = gm->a[3+ioff41]          + ylambda*c1x + xmu*c1y;
+      gm->a[4+ioff41] = gm->a[4+ioff41] + muterm + ylambda*c1y + ymu*c1y;
+      gm->a[5+ioff41] = gm->a[5+ioff41]          + ylambda*c1z + zmu*c1y;
+      gm->a[6+ioff41] = gm->a[6+ioff41]          + zlambda*c1x + xmu*c1z;
+      gm->a[7+ioff41] = gm->a[7+ioff41]          + zlambda*c1y + ymu*c1z;
+      gm->a[8+ioff41] = gm->a[8+ioff41] + muterm + zlambda*c1z + zmu*c1z;
+
+      muterm = mu*(xn*c2x + yn*c2y + zn*c2z);
+
+      gm->a[0+ioff42] = gm->a[0+ioff42] + muterm + xlambda*c2x + xmu*c2x;
+      gm->a[1+ioff42] = gm->a[1+ioff42]          + xlambda*c2y + ymu*c2x;
+      gm->a[2+ioff42] = gm->a[2+ioff42]          + xlambda*c2z + zmu*c2x;
+      gm->a[3+ioff42] = gm->a[3+ioff42]          + ylambda*c2x + xmu*c2y;
+      gm->a[4+ioff42] = gm->a[4+ioff42] + muterm + ylambda*c2y + ymu*c2y;
+      gm->a[5+ioff42] = gm->a[5+ioff42]          + ylambda*c2z + zmu*c2y;
+      gm->a[6+ioff42] = gm->a[6+ioff42]          + zlambda*c2x + xmu*c2z;
+      gm->a[7+ioff42] = gm->a[7+ioff42]          + zlambda*c2y + ymu*c2z;
+      gm->a[8+ioff42] = gm->a[8+ioff42] + muterm + zlambda*c2z + zmu*c2z;
+
+      muterm = mu*(xn*c3x + yn*c3y + zn*c3z);
+
+      gm->a[0+ioff43] = gm->a[0+ioff43] + muterm + xlambda*c3x + xmu*c3x;
+      gm->a[1+ioff43] = gm->a[1+ioff43]          + xlambda*c3y + ymu*c3x;
+      gm->a[2+ioff43] = gm->a[2+ioff43]          + xlambda*c3z + zmu*c3x;
+      gm->a[3+ioff43] = gm->a[3+ioff43]          + ylambda*c3x + xmu*c3y;
+      gm->a[4+ioff43] = gm->a[4+ioff43] + muterm + ylambda*c3y + ymu*c3y;
+      gm->a[5+ioff43] = gm->a[5+ioff43]          + ylambda*c3z + zmu*c3y;
+      gm->a[6+ioff43] = gm->a[6+ioff43]          + zlambda*c3x + xmu*c3z;
+      gm->a[7+ioff43] = gm->a[7+ioff43]          + zlambda*c3y + ymu*c3z;
+      gm->a[8+ioff43] = gm->a[8+ioff43] + muterm + zlambda*c3z + zmu*c3z;
     }
   }
 
